--- a/src/index.html
+++ b/src/index.html
@@ -3,26 +3,29 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Giant</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Dosis:400,500,600,700" rel="stylesheet">
+	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
 	<div class="toppanel">
-		<div class="container">
-			<nav class="mainmenu">
-				<ul class="mainmenu__list">
-					<li class="main__item main__item--active">
-						<a href="#">Landing Pages</a>
+		<div class="container row">
+			<nav class="main-menu">
+				<ul class="main-menu__list">
+					<li class="main-menu__item main-menu__item--active">
+						<a class="main-menu__link" href="#">Landing Pages</a>
 					</li>
-					<li class="main__item">
-						<a href="#">Features</a>
+					<li class="main-menu__item">
+						<a class="main-menu__link" href="#">Features</a>
 					</li>
-					<li class="main__item">
-						<a href="#">Screenshots</a>
+					<li class="main-menu__item">
+						<a class="main-menu__link" href="#">Screenshots</a>
 					</li>
-					<li class="main__item">
-						<a href="#">Pricing</a>
+					<li class="main-menu__item">
+						<a class="main-menu__link" href="#">Pricing</a>
 					</li>
-					<li class="main__item">
-						<a href="#">Contact Us</a>
+					<li class="main-menu__item">
+						<a class="main-menu__link" href="#">Contact Us</a>
 					</li>
 				</ul>
 			</nav>
@@ -30,16 +33,16 @@
 			<div class="soclinks">
 				<ul class="soclinks__list">
 					<li class="soclinks__item">
-						<a href="#">Facebook</a>
+						<a class="fa fa-facebook" aria-hidden="true" href="#">Facebook</a>
 					</li>
 					<li class="soclinks__item">
-						<a href="#">Twitter</a>
+						<a class="fa fa-twitter" aria-hidden="true" href="#">Twitter</a>
 					</li>
 					<li class="soclinks__item">
-						<a href="#">Github</a>
+						<a class="fa fa-github" aria-hidden="true" href="#">Github</a>
 					</li>
 					<li class="soclinks__item">
-						<a href="#">Skype</a>
+						<a class="fa fa-skype" aria-hidden="true" href="#">Skype</a>
 					</li>
 				</ul>
 			</div>
@@ -47,7 +50,7 @@
 	</div>
 
 	<header class="page-header">
-		<div class="container">
+		<div class="container row">
 			<div class="logo">
 				<div class="logo__image">
 					<img src="img/logo.png" alt="Giant logo" width="48" height="40">
@@ -57,18 +60,18 @@
 			</div>
 
 			<div class="contacts">
-				<a href="tel:+8801841136251">+880 1841 136251</a>
-				<a href="mailto:info@spondonit.com">info@spondonit.com</a>
+				<a class="fa fa-phone" aria-hidden="true" href="tel:+8801841136251">+880 1841 136251</a>
+				<a class="fa fa-envelope" aria-hidden="true" href="mailto:info@spondonit.com">info@spondonit.com</a>
 			</div>
 		</div>
 	</header>
 
 	<main class="page-content">
 		<section class="banner">
-			<div class="container">
+			<div class="container row">
 				<h2 class="visually-hidden">Banner</h2>
 				<div class="banner__image">
-					<img src="img/apple-watch.png" alt="Apple watch" width="1106" height="590">
+					<img src="img/apple-watch.png" alt="Apple watch" width="369" height="496">
 				</div>
 
 				<div class="banner__desc">
@@ -93,31 +96,31 @@
 				<h2 class="features__title">Build professional landing pages in minutes</h2>
 
 				<div class="features__desc">
-					<p>Everyone’s reasons for learning user interface design are different. If you’re already a developer, or a PM, or a UX designer, why develop this totally separate skill?</p>
+					<p>Everyone’s reasons for learning user interface design are different. If you’re already a developer, or a PM, or a<br>UX designer, why develop this totally separate skill?</p>
 				</div>
 
 				<ul class="features__list">
-					<li class="features-item">
+					<li class="features-item fa-tags">
 						<h3 class="features-item__title">Sell any product online</h3>
 						<p class="features-item__text">Over 92% of computers are infected with Adware and spyware. Such software is</p>
 					</li>
-					<li class="features-item">
+					<li class="features-item fa-cog">
 						<h3 class="features-item__title">Very easy to customize</h3>
 						<p class="features-item__text">Many of us are so used to working on a computer desktop that when it comes</p>
 					</li>
-					<li class="features-item">
+					<li class="features-item fa-paint-brush">
 						<h3 class="features-item__title">Unlimited colors</h3>
 						<p class="features-item__text">Audio player software is used to play back sound recordings in one of the many</p>
 					</li>
-					<li class="features-item">
+					<li class="features-item fa-fire-extinguisher">
 						<h3 class="features-item__title">Responsive, HTML5, CSS3</h3>
 						<p class="features-item__text">Computers have become ubiquitous in almost every facet of our lives. At work</p>
 					</li>
-					<li class="features-item">
+					<li class="features-item fa-file-text">
 						<h3 class="features-item__title">Designed to convert</h3>
 						<p class="features-item__text">If you are looking for a new way to promote your business that won’t cost</p>
 					</li>
-					<li class="features-item">
+					<li class="features-item fa-life-ring">
 						<h3 class="features-item__title">With no boundaries</h3>
 						<p class="features-item__text">Now, if you are interested in being the best player, getting really good money and</p>
 					</li>
